# scrapy-basics

./: .gitignore  README.md  books_data.csv  pyproject.toml
bookscrapper/: items.py  pipelines.py  settings.py
bookscrapper/spiders/: bookspider.py
